# stdBLAS

./: .clang-format  CMakeLists.txt  README.md  do-configure  lewg-presentation.md
.github/workflows/: cmake.yml  linux_hpx.yml  macos.yml
.github/workflows/utils/: build_kokkos-kernels.sh  build_kokkos.sh  build_mdspan.sh
cmake/: LinAlgConfig.cmake.in
compilation_tests/: CMakeLists.txt  ctest_common.hpp
examples/: 01_scale.cpp  02_matrix_vector_product_basic.cpp  03_matrix_vector_product_mixedprec.cpp  CMakeLists.txt
examples/hello_world/: CMakeLists.txt  hello_world.cpp
examples/hpx-based/: CMakeLists.txt  add_hpx.cpp  scale_hpx.cpp
examples/kokkos-based/: CMakeLists.txt  add_kokkos.cpp  dot_kokkos.cpp  dotc_kokkos.cpp  idx_abs_max_kokkos.cpp  matrix_vector_product_kokkos.cpp  scale_kokkos.cpp  simple_scale_kokkos.cpp  vector_abs_sum_kokkos.cpp  vector_norm2_kokkos.cpp  vector_sum_of_squares_kokkos.cpp
include/experimental/: linalg
include/experimental/__p1673_bits/: abs_if_needed.hpp  blas1_dot.hpp  blas1_givens.hpp  blas1_linalg_add.hpp  blas1_linalg_copy.hpp  blas1_linalg_swap.hpp  blas1_matrix_frob_norm.hpp  blas1_matrix_inf_norm.hpp  blas1_matrix_one_norm.hpp  blas1_scale.hpp  blas1_vector_abs_sum.hpp  blas1_vector_idx_abs_max.hpp  blas1_vector_norm2.hpp  blas1_vector_sum_of_squares.hpp  blas2_matrix_rank_1_update.hpp  blas2_matrix_rank_2_update.hpp  blas2_matrix_vector_product.hpp  blas2_matrix_vector_solve.hpp  blas3_matrix_product.hpp  blas3_matrix_rank2k_update.hpp  blas3_matrix_rank_2k_update.hpp  blas3_matrix_rank_k_update.hpp  blas3_triangular_matrix_matrix_solve.hpp  conj_if_needed.hpp  conjugate_if_needed.hpp  conjugate_transpose_view.hpp  conjugate_transposed.hpp  conjugate_view.hpp  conjugated.hpp  conjugated_view.hpp  imag_if_needed.hpp  layout_blas_general.hpp  layout_tags.hpp  layout_triangle.hpp  linalg_add.hpp  linalg_config.h.in  linalg_execpolicy_mapper.hpp  linalg_swap.hpp  macros.hpp  maybe_static_size.hpp  (+11 more)
tests/: CMakeLists.txt  abs_sum.cpp  add.cpp  conjugate_transpose_view.cpp  conjugate_transposed.cpp  conjugate_view.cpp  conjugated.cpp  copy.cpp  dot.cpp  gemm.cpp  gemv.cpp  givens.cpp  gtest_fixtures.hpp  idx_abs_max.cpp  iterator.cpp  layout_blas_general.cpp  matrix_inf_norm.cpp  matrix_one_norm.cpp  norm2.cpp  scale.cpp  scaled.cpp  scaled_view.cpp  swap.cpp  symm.cpp  transpose_view.cpp  transposed.cpp  trmm.cpp
tests/hpx-based/: CMakeLists.txt  add_rank1_hpx.cpp  gtest_fixtures.hpp  gtest_main_hpx.cpp  helpers.hpp  scale_rank1_hpx.cpp  scale_rank2_hpx.cpp  test.cmake
tests/kokkos-based/: CMakeLists.txt  add_kokkos.cpp  copy_kokkos.cpp  dot_kokkos.cpp  dotc_kokkos.cpp  gemm_C_AB.cpp  gemm_C_ABT.cpp  gemm_C_ATB.cpp  gtest_blas1_fixtures.hpp  gtest_fixtures.hpp  gtest_main_kokkos.cpp  helpers.hpp  hermitian_matrix_left_product_kokkos.cpp  hermitian_matrix_rank1_update_kokkos.cpp  hermitian_matrix_rank2_update_kokkos.cpp  hermitian_matrix_rank_2k_update_kokkos.cpp  hermitian_matrix_rank_k_update_kokkos.cpp  hermitian_matrix_right_product_kokkos.cpp  idx_abs_max_kokkos.cpp  matrix_frob_norm_kokkos.cpp  matrix_inf_norm_kokkos.cpp  matrix_one_norm_kokkos.cpp  matrix_rank1_update_kokkos.cpp  mdspan_to_view.cpp  overwriting_hermitian_matrix_vector_product.cpp  overwriting_matrix_matrix_product.cpp  overwriting_matrix_vector_product.cpp  overwriting_symmetric_matrix_vector_product.cpp  overwriting_triangular_matrix_vector_product.cpp  scale_kokkos.cpp  scale_rank1_kokkos.cpp  scale_rank2_kokkos.cpp  swap_elements_kokkos.cpp  swap_elements_rank1_kokkos.cpp  swap_elements_rank2_kokkos.cpp  symmetric_matrix_left_product_kokkos.cpp  symmetric_matrix_rank1_update_kokkos.cpp  symmetric_matrix_rank2_update_kokkos.cpp  symmetric_matrix_rank_2k_update_kokkos.cpp  symmetric_matrix_rank_k_update_kokkos.cpp  (+15 more)
tests/native/: CMakeLists.txt  abs_if_needed.cpp  abs_sum.cpp  add.cpp  conj_if_needed.cpp  conjugate_transposed.cpp  conjugated.cpp  copy.cpp  dot.cpp  gemm.cpp  gemv.cpp  gemv_no_ambig.cpp  ger.cpp  gerc.cpp  givens.cpp  gtest_fixtures.hpp  hemm.cpp  her.cpp  her2.cpp  her2k.cpp  herk.cpp  idx_abs_max.cpp  imag_if_needed.cpp  iterator.cpp  matrix_inf_norm.cpp  matrix_one_norm.cpp  mixed_accessors.cpp  my_numbers.hpp  norm2.cpp  proxy_reference.hpp  proxy_refs.cpp  real_if_needed.cpp  scale.cpp  scaled.cpp  swap.cpp  symm.cpp  syr.cpp  syr2.cpp  syr2k.cpp  syrk.cpp  (+7 more)
tpl-implementations/include/experimental/: linalg_hpxkernels  linalg_kokkoskernels
tpl-implementations/include/experimental/__p1673_bits/hpx-kernels/: blas1_add_hpx.hpp  blas1_scale_hpx.hpp  exec_policy_wrapper_hpx.hpp  signal_hpx_impl_called.hpp
tpl-implementations/include/experimental/__p1673_bits/kokkos-kernels/: blas1_add_kk.hpp  blas1_copy_kk.hpp  blas1_dot_kk.hpp  blas1_givens_kk.hpp  blas1_idx_abs_max_kk.hpp  blas1_matrix_frob_norm_kk.hpp  blas1_matrix_inf_norm_kk.hpp  blas1_matrix_one_norm_kk.hpp  blas1_scale_kk.hpp  blas1_swap_elements_kk.hpp  blas1_swap_kk.hpp  blas1_vector_abs_sum_kk.hpp  blas1_vector_norm2_kk.hpp  blas1_vector_sum_of_squares_kk.hpp  blas2_gemv_kk.hpp  blas2_hemv_kk.hpp  blas2_matrix_rank_1_update.hpp  blas2_matrix_rank_2_update.hpp  blas2_matrix_vector_product_kk.hpp  blas2_symv_kk.hpp  blas2_triangular_mat_vec_product.hpp  blas2_triangular_matrix_vector_solve.hpp  blas3_gemm_kk.hpp  blas3_matrix_product_kk.hpp  blas3_matrix_rank_2k_update.hpp  blas3_matrix_rank_k_update.hpp  blas3_overwriting_gemm_kk.hpp  blas3_triangular_matrix_matrix_solve.hpp  blas3_updating_gemm_kk.hpp  exec_policy_wrapper_kk.hpp  kokkos_conjugate.hpp  mdspan_to_view_mapper_kk.hpp  parallel_matrix.hpp  signal_kokkos_impl_called.hpp  static_extent_match.hpp  triangle.hpp
tpl-implementations/kokkos-kernels/include/: blas1_scale_kk.hpp  exec_policy_wrapper_kk.hpp
