
macro(linalg_add_test name)
  add_executable(${name} ${name}.cpp)
  if(BLAS_FOUND)
    target_link_libraries(${name} linalg GTest::GTest GTest::Main ${BLAS_LIBRARIES})
  else()
    # BLAS_LIBRARIES is literally "FALSE" if the BLAS was not found.
    # Linking against that causes linker errors involving "FALSE.lib".
    # Thus, we exclude BLAS_LIBRARIES completely if the BLAS was not found.
    target_link_libraries(${name} linalg GTest::GTest GTest::Main)
  endif()
  add_test(${name} ${name})
  set_target_properties(${name} PROPERTIES FOLDER "Tests")
endmacro()

linalg_add_test(abs_sum)
linalg_add_test(add)
linalg_add_test(conjugate_transposed)
linalg_add_test(conjugated)
linalg_add_test(copy)
linalg_add_test(dot)
linalg_add_test(gemm)
linalg_add_test(gemv)
linalg_add_test(gemv_no_ambig)
linalg_add_test(givens)
linalg_add_test(hemm)
linalg_add_test(idx_abs_max)
linalg_add_test(iterator)
linalg_add_test(matrix_inf_norm)
linalg_add_test(matrix_one_norm)
linalg_add_test(norm2)
linalg_add_test(proxy_refs)
linalg_add_test(scale)
linalg_add_test(scaled)
linalg_add_test(swap)
linalg_add_test(symm)
linalg_add_test(transposed)
linalg_add_test(trmm)
